--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies.windows]
-version = "0.58.0"
+version = "0.58"
 features = [
     "Win32_System_Threading",
     "Win32_System_Console",
     "Win32_Security"
 ]
+
+[dependencies]
+anyhow = "1.0"
